--- a/src/components/Product/Page/_product.scss
+++ b/src/components/Product/Page/_product.scss
@@ -146,11 +146,14 @@
     width: 40px;
     height: 30px;
     margin-left: 4px;
+    padding: 4px;
     background: rgb(56 64 73 / 80%);
     border-radius: var(--card-border-radius);
 
     img {
       max-width: 100%;
+      max-height: 100%;
+      filter: brightness(0) invert(1);
     }
   }
 }
