--- a/src/components/Ui/Modal/_modal.scss
+++ b/src/components/Ui/Modal/_modal.scss
@@ -148,6 +148,8 @@
     align-items: center;
     width: 31%;
     height: 104px;
+    padding: 4px;
+    padding: 10px;
     background: rgba(#384049, 0.25);
     border: 4px solid transparent;
     border-radius: 9px;
@@ -155,9 +157,9 @@
     cursor: pointer;
 
     img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+      max-width: 100%;
+      max-height: 100%;
+      filter: brightness(0) invert(1);
     }
 
     &:hover {
@@ -167,6 +169,10 @@
     &._active {
       background: #384049;
       border-color: #fff;
+
+      img {
+        // filter: none
+      }
     }
   }
 }
