--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -50,7 +50,7 @@ h6,
   line-height: calc(21 / 18);
 }
 
-@include r($sm) {
+@include r($md) {
   .h1-title {
     font-size: 38px;
   }
@@ -97,7 +97,7 @@ h6,
   line-height: 1.42;
 }
 
-@include r($sm) {
+@include r($md) {
   .p-main {
     font-size: 16px;
   }
