--- a/src/components/Layout/Footer/_footer.scss
+++ b/src/components/Layout/Footer/_footer.scss
@@ -49,6 +49,8 @@
 
 @include r($md) {
   .footer {
+    padding: 64px 0;
+
     &__list {
       flex-direction: column;
       align-items: center;
@@ -57,5 +59,9 @@
         margin: 0 auto 15px !important;
       }
     }
+  }
+
+  .footer2 {
+    padding-bottom: 120px;
   }
 }
