--- a/src/components/Product/ProductsSlider/_products-slider.scss
+++ b/src/components/Product/ProductsSlider/_products-slider.scss
@@ -63,7 +63,8 @@
   .swiper {
     overflow: visible;
     width: 100%;
-    height: 500px;
+    height: 100%;
+    max-height: 500px;
   }
 
   .swiper-wrapper {
