add menu , responsive updates

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'utils';
 @import 'theme';
 @import 'vendor/bootstrap-reboot';
+@import 'vendor/hamburger';
 @import 'react-photo-view/dist/react-photo-view.css';
 @import 'react-toastify/dist/ReactToastify.css';
 @import 'swiper/css';
