--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -40,5 +40,5 @@
   // components
   --body-background: linear-gradient(0deg, #010206, #010206),
     linear-gradient(180deg, #1d5fdd 0%, #002e88 51.56%, #00102e 100%);
-  --header-background: #373f54;
+  --modal-background: rgb(1 2 6 / 60%);
 }
