--- a/src/components/Product/_home.scss
+++ b/src/components/Product/_home.scss
@@ -21,10 +21,6 @@
     mix-blend-mode: lighten;
   }
 
-  &__products {
-    margin-top: 100px;
-  }
-
   &__logo {
     display: flex;
     justify-content: center;
@@ -34,6 +30,30 @@
     img {
       max-width: 100%;
     }
+  }
+
+  &__categories {
+    position: relative;
+    display: flex;
+    z-index: 2;
+    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: -12px;
+    flex-wrap: wrap;
+
+    .button {
+      margin-right: 12px;
+      margin-bottom: 12px;
+      padding: 16px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__products {
+    margin-top: 52px;
   }
 
   &__category {
@@ -123,6 +143,13 @@
 
 @include r($lg) {
   .home {
+    &__categories {
+      margin-top: 60px;
+    }
+
+    // &__products {
+    // }
+
     &__category-grid {
       // grid-template-columns: 1fr 1fr;
       grid-gap: 60px 24px;
@@ -180,6 +207,14 @@
       font-size: 18px;
       line-height: 26px;
       opacity: 1;
+    }
+
+    &__categories {
+      margin-top: 42px;
+
+      .button {
+        padding: 12px;
+      }
     }
 
     &__category-title {
