--- a/src/assets/styles/layout/_typography.scss
+++ b/src/assets/styles/layout/_typography.scss
@@ -264,6 +264,41 @@ h6,
   }
 }
 
+@include r($md) {
+  .wysiwyg {
+    font-size: 14px;
+
+    h1 {
+      font-size: 26px;
+    }
+
+    h2 {
+      font-size: 22px;
+    }
+
+    h3 {
+      font-size: 20px;
+    }
+
+    h4 {
+      font-size: 18px;
+    }
+
+    h5 {
+      font-size: 16px;
+    }
+
+    h6 {
+      font-size: 16px;
+    }
+
+    ol,
+    li {
+      font-size: 16px;
+    }
+  }
+}
+
 ul,
 li,
 p {
