--- a/src/components/Content/Faq/_faq.scss
+++ b/src/components/Content/Faq/_faq.scss
@@ -82,16 +82,32 @@
   }
 }
 
-@include r($hd) {
+@include r(1919) {
   .faq {
     &__wrapper {
-      padding-left: 80px;
-      padding-right: 80px;
+      padding-left: 200px;
+      padding-right: 200px;
     }
 
     &__guide {
-      margin-left: -120px;
-      margin-right: -120px;
+      margin-left: -240px;
+      margin-right: -240px;
+    }
+  }
+}
+
+@include r($hd) {
+  .faq {
+    padding-bottom: 80px;
+
+    &__wrapper {
+      padding-left: 140px;
+      padding-right: 140px;
+    }
+
+    &__guide {
+      margin-left: -180px;
+      margin-right: -180px;
     }
   }
 }
@@ -117,12 +133,22 @@
     &__head {
       margin-bottom: 42px;
     }
+
+    &__wrapper {
+      padding-left: 80px;
+      padding-right: 80px;
+    }
+
+    &__guide {
+      margin-left: -120px;
+      margin-right: -120px;
+    }
   }
 }
 
 @include r($md) {
   .faq {
-    padding: 40px 0 100px;
+    padding: 42px 0 174px;
 
     &__head {
       margin-bottom: 32px;
@@ -149,5 +175,11 @@
         top: 56px;
       }
     }
+  }
+}
+
+@include r($sm) {
+  .faq {
+    padding-bottom: 100px;
   }
 }
