hotfix, add back

--- a/src/components/Product/Page/_product.scss
+++ b/src/components/Product/Page/_product.scss
@@ -2,6 +2,10 @@
 .product {
   padding: 48px 0 50px;
 
+  &__back {
+    margin-bottom: 12px;
+  }
+
   &__title {
     margin-bottom: 56px;
     text-align: center;
