--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -46,7 +46,9 @@
     height: 100%;
     padding: 22px 15px;
     background: white;
-    clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
+
+    // clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
+    clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
 
     img {
       display: block;
@@ -55,7 +57,8 @@
       margin: 0 auto;
       transition: all 0.25s $ease;
       object-fit: cover;
-      clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+
+      // clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
     }
   }
 
