--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -58,7 +58,7 @@
       transition: all 0.25s $ease;
       object-fit: cover;
 
-      // clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+      clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
     }
   }
 
