--- a/src/components/Layout/Header/_header.scss
+++ b/src/components/Layout/Header/_header.scss
@@ -17,7 +17,7 @@
   transition: transform 0.25s $ease, box-shadow 0.2s linear;
 
   .container {
-    padding: 0 20px 0 12px;
+    padding: 0 0 0 20px;
   }
 
   &__wrapper {
@@ -75,7 +75,7 @@
     flex: 0 0 35%;
     justify-content: center;
     align-items: center;
-    padding-left: 20px;
+    padding-right: 20px;
   }
 
   &__user {
@@ -104,8 +104,8 @@
   }
 
   &__hamburger {
-    margin-left: 10px;
-    margin-right: -10px;
+    margin-left: -10px;
+    margin-right: 10px;
     padding: 10px;
   }
 
@@ -279,6 +279,7 @@
 
     &__auth {
       display: block;
+      flex-basis: auto;
       padding-left: 0;
     }
 
@@ -287,7 +288,7 @@
     }
 
     &__hamburger {
-      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
