--- a/src/components/Layout/Menu/_menu.scss
+++ b/src/components/Layout/Menu/_menu.scss
@@ -18,9 +18,10 @@
     flex: 1 0 auto;
     width: 100%;
     max-width: 360px;
-    margin-left: auto;
-    margin-right: 0;
-    padding: 105px 20px 20px;
+    max-height: 100%;
+    margin-left: 0;
+    margin-right: auto;
+    padding: 105px 0 0;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
   }
@@ -74,5 +75,11 @@
     &__wrapper {
       padding-top: 74px;
     }
+  }
+}
+
+.header._scrolled {
+  + .settings .settings__wrapper {
+    padding-top: 74px;
   }
 }
