bg fix (wrapper)

--- a/src/components/Layout/Footer/_footer.scss
+++ b/src/components/Layout/Footer/_footer.scss
@@ -3,6 +3,7 @@
   padding: 106px 0;
   background: url('/img/decor/footer.png') no-repeat center center / cover;
   border-top: 4px solid #3f1e01;
+  overflow-x: hidden;
 
   &__list {
     position: relative;
