--- a/src/assets/styles/layout/_page.scss
+++ b/src/assets/styles/layout/_page.scss
@@ -1,9 +1,12 @@
 .fire {
   position: absolute;
-  left: 50%;
+  overflow: hidden;
+  display: flex;
+  left: 0;
+  right: 0;
   z-index: 1;
-  width: min-content;
-  transform: translateX(-50%);
+  justify-content: center;
+  font-size: 0;
   pointer-events: none;
 
   &._bottom {
@@ -36,4 +39,8 @@
 
 .swiper {
   user-select: none;
+}
+
+.main-wrapper {
+  overflow: hidden;
 }
