--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -1,6 +1,8 @@
 .product-card {
   position: relative;
   display: block;
+  display: -webkit-box;
+  display: flexbox;
   display: flex;
   z-index: 3;
   flex-direction: column;
@@ -8,151 +10,135 @@
   width: 100%;
   max-width: min-content;
   min-width: 1px;
-  transition: all 0.25s $ease;
-
-  &__name {
-    position: absolute;
-    left: 0;
-    bottom: 70%;
-    z-index: 1;
-    width: 100%;
-    min-width: 1px;
-    margin: 0 auto;
-    margin-left: 0;
-    font-family: var(--font-accent);
-    font-weight: 700;
-    font-size: 18px; // conflicts design 24
-    line-height: calc(28 / 24);
-    text-align: center;
-    color: #fff;
-    opacity: 0;
-    will-change: top;
-    transition: all 0.3s $ease;
-  }
-
-  &__top {
-    position: relative;
-    z-index: 2;
-    flex: 0 0 auto;
-    width: 242px;
-    height: 203px;
-    background-size: 100%;
-  }
-
-  &__image {
-    position: relative;
-    overflow: hidden;
-    flex: 0 0 auto;
-    height: 100%;
-    padding: 22px 15px;
-    background: white;
-
-    // clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
-    clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
-
-    img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      margin: 0 auto;
-      transition: all 0.25s $ease;
-      object-fit: cover;
-
-      clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
-    }
-  }
-
-  &__action {
-    position: relative;
-    display: flex;
-    top: -20px;
-    z-index: 2;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 228px;
-    height: 45px;
-    margin-right: 24px;
-    background: var(--color-primary);
-    transition: all 0.25s $ease;
-  }
-
-  &__price {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    font-family: var(--font-alt);
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 26px;
-    text-align: center;
-    color: rgb(0 0 0 / 80%);
-
-    &._discount {
-      color: var(--color-accent);
-
-      .product-card__price-old {
-        display: inline-block;
-      }
-    }
-  }
-
-  &__price-old {
-    display: none;
-    margin-right: 8px;
-    font-size: 14px;
-    line-height: 1;
-    text-decoration: line-through;
-    color: rgb(0 0 0 / 50%);
-  }
-
-  &:hover {
-    .product-card__name {
-      bottom: calc(100% + 16px);
-      opacity: 1;
-    }
-
-    .product-card__action {
-      background: var(--color-primary-hover);
-      transform: scale(1.05);
-    }
-
-    .product-card__image img {
-      transform: scale(1.1);
-    }
-  }
+  text-decoration: none;
+  transition: all 0.25s ease-in-out;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
 }
 
-// @include r($xl) {
-//   .product-card {
-//     width: 26%;
-//   }
-// }
-
-@include r($lg) {
-  .product-card {
-    // width: 36%;
-
-    &__name {
-      background: rgba(#000, 0.5);
-    }
-  }
+.product-card__img2 {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 20px;
+  transition: 0.3s;
+  object-fit: contain;
+  object-position: bottom;
 }
 
-@include r($md) {
-  .product-card {
-    &__name {
-      position: static;
-      width: 100%;
-      max-width: 320px;
-      margin: 0 auto 12px;
-      padding: 4px;
-      font-size: 18px;
-      opacity: 1;
-    }
+.product-card:hover .product-card__img2 {
+  transform: scale(1.1);
+}
 
-    &__top {
-      margin-top: auto;
-    }
-  }
+.product-card__name {
+  position: absolute;
+  left: 0;
+  bottom: 70%;
+  z-index: 1;
+  width: 100%;
+  min-width: 1px;
+  margin: 0 auto 0 0;
+  font-family: Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.1666666667;
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  will-change: top;
+  transition: all 0.3s ease-in-out;
+}
+
+.product-card__top {
+  position: relative;
+  z-index: 2;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  width: 242px;
+  height: 203px;
+  background-size: 100%;
+}
+
+.product-card__image {
+  position: relative;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  height: 100%;
+  padding: 22px 15px;
+  background: white;
+  clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+}
+
+.product-card__image .product-card__image-img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  object-fit: cover;
+  clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+}
+
+.product-card__action {
+  position: relative;
+  display: -webkit-box;
+  display: flexbox;
+  display: flex;
+  top: -24px;
+  z-index: 2;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 228px;
+  height: 45px;
+  margin-right: 24px;
+  background: #ffba01;
+  transition: all 0.25s ease-in-out;
+}
+
+.product-card__price {
+  position: relative;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1;
+  text-align: center;
+  color: rgb(0 0 0 / 80%);
+}
+
+.product-card__price._discount {
+  color: hextorbg(#600728);
+}
+
+.product-card__price._discount .product-card__price-old {
+  display: block;
+}
+
+.product-card__price-old {
+  display: none;
+  width: 100%;
+  margin-right: 8px;
+  font-size: 14px;
+  line-height: 1;
+  text-align: right;
+  text-decoration: line-through;
+  color: rgb(0 0 0 / 50.2%);
+}
+
+.product-card:hover .product-card__name {
+  bottom: calc(100% + 16px);
+  opacity: 1;
+}
+
+.product-card:hover .product-card__action {
+  background: #ffde84;
+  transform: scale(1.05);
 }
