--- a/src/components/Layout/Header/_header.scss
+++ b/src/components/Layout/Header/_header.scss
@@ -17,7 +17,7 @@
   transition: transform 0.25s $ease, box-shadow 0.2s linear;
 
   .container {
-    padding: 0 0 0 20px;
+    padding: 0 20px;
   }
 
   &__wrapper {
@@ -75,7 +75,7 @@
     flex: 0 0 35%;
     justify-content: center;
     align-items: center;
-    padding-right: 20px;
+    padding-left: 20px;
   }
 
   &__user {
