--- a/src/components/Content/Faq/_faq.scss
+++ b/src/components/Content/Faq/_faq.scss
@@ -1,5 +1,5 @@
 .faq {
-  padding: 60px 0 150px;
+  padding: 60px 0 00;
 
   &__head {
     position: relative;
@@ -98,7 +98,7 @@
 
 @include r($hd) {
   .faq {
-    padding-bottom: 80px;
+    padding-bottom: 0;
 
     &__wrapper {
       padding-left: 140px;
@@ -148,7 +148,7 @@
 
 @include r($md) {
   .faq {
-    padding: 42px 0 174px;
+    padding: 42px 0 0;
 
     &__head {
       margin-bottom: 32px;
@@ -175,11 +175,5 @@
         top: 56px;
       }
     }
-  }
-}
-
-@include r($sm) {
-  .faq {
-    padding-bottom: 100px;
   }
 }
