--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -68,9 +68,9 @@
   -webkit-box-flex: 0;
   flex: 0 0 auto;
   height: 100%;
-  padding: 22px 15px;
+  padding: 12px 7px;
   background: white;
-  clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+  clip-path: polygon(0% 0%, 100% 15%, 85% 100%, 8% 100%);
 }
 
 .product-card__image .product-card__image-img {
@@ -79,7 +79,7 @@
   height: 100%;
   margin: 0 auto;
   object-fit: cover;
-  clip-path: polygon(0% 0%, 100% 10%, 88% 100%, 6% 100%);
+  clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
 }
 
 .product-card__action {
@@ -141,4 +141,26 @@
 .product-card:hover .product-card__action {
   background: #ffde84;
   transform: scale(1.05);
+}
+
+@media only screen and (width <= 991px) {
+  .product-card__name {
+    background: rgb(0 0 0 / 50%);
+  }
+}
+
+@media only screen and (width <= 767px) {
+  .product-card__name {
+    position: static;
+    width: 100%;
+    max-width: 320px;
+    margin: 0 auto 12px;
+    padding: 4px;
+    font-size: 18px;
+    opacity: 1;
+  }
+
+  .product-card__top {
+    margin-top: auto;
+  }
 }
