--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -1,8 +1,6 @@
 .product-card {
   position: relative;
   display: block;
-  display: -webkit-box;
-  display: flexbox;
   display: flex;
   z-index: 3;
   flex-direction: column;
@@ -12,10 +10,6 @@
   min-width: 1px;
   text-decoration: none;
   transition: all 0.25s ease-in-out;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
 }
 
 .product-card__img2 {
@@ -71,32 +65,23 @@
   padding: 12px 7px;
   background: white;
   clip-path: polygon(0% 0%, 100% 15%, 85% 100%, 8% 100%);
-}
-
-.product-card__image .product-card__image-img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  object-fit: cover;
-  clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
+  .product-card__image-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    object-fit: cover;
+    clip-path: polygon(0% 0%, 100% 13%, 85% 100%, 8% 100%);
+  }
 }
 
 .product-card__action {
   position: relative;
-  display: -webkit-box;
-  display: flexbox;
   display: flex;
   top: -24px;
   z-index: 2;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 228px;
   height: 45px;
