--- a/src/components/Product/_product-card.scss
+++ b/src/components/Product/_product-card.scss
@@ -150,3 +150,37 @@
     margin-top: auto;
   }
 }
+
+// alt mode
+.product-card._vertical {
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  border-radius: 8px;
+
+  .product-card__image {
+    opacity: 0;
+  }
+
+  .product-card__top {
+    overflow: hidden;
+    width: 100%;
+    height: 240px;
+    max-width: 160%;
+    background: white;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .product-card__img2 {
+    padding-bottom: 0;
+    object-position: center;
+  }
+
+  .product-card__action {
+    top: auto;
+    bottom: 0;
+    max-width: 160px;
+    margin-right: 0;
+  }
+}
