--- a/src/components/Product/Page/_product.scss
+++ b/src/components/Product/Page/_product.scss
@@ -43,6 +43,7 @@
     flex: 1 0 auto;
     justify-content: center;
     align-items: center;
+    max-width: 200px;
     border-radius: var(--card-border-radius);
     object-fit: cover;
 
