--- a/src/components/Product/Page/_product.scss
+++ b/src/components/Product/Page/_product.scss
@@ -44,6 +44,7 @@
     justify-content: center;
     align-items: center;
     max-width: 200px;
+    margin: 0 auto;
     border-radius: var(--card-border-radius);
     object-fit: cover;
 
