--- a/src/assets/styles/components/_media.scss
+++ b/src/assets/styles/components/_media.scss
@@ -71,7 +71,7 @@
     margin-bottom: 20px;
   }
 
-  .mob-acts{
+  .mobile-navi{
     display: block;
   }
   .sec-footer{
@@ -361,7 +361,7 @@
       pointer-events: none;
     }
   }
-  .mob-acts{
+  .mobile-navi{
     z-index: 90;
   }
   .sec-notify__mob{
