--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -12,6 +12,7 @@
 @import 'components/_modal';
 @import 'components/_main';
 @import 'components/_media';
+@import '_addons';
 
 .theme-white{
   background-color: #F5F5F7;
