chat create updates, select styles

--- a/src/assets/styles/_addons.scss
+++ b/src/assets/styles/_addons.scss
@@ -1,4 +1,3 @@
-
 .loader {
   &__wrapper {
     display: flex;
@@ -113,7 +112,6 @@
   }
 }
 
-
 .preview {
   position: relative;
   display: flex;
@@ -195,11 +193,17 @@
   }
 }
 
-
 .block-window__input {
   display: flex;
   flex-wrap: wrap;
   flex: 1;
+
+  .block-select {
+    width: 100%;
+    max-width: 170px;
+    flex: 0 1 auto;
+    margin-right: 10px;
+  }
 
   .ql-editor {
     font: unset;
@@ -239,7 +243,6 @@ html.dark {
   }
 }
 
-
 @media only screen and (max-width: 900px) {
   .block-window__input {
     textarea {
@@ -248,7 +251,6 @@ html.dark {
     }
   }
 }
-
 
 // chat images block
 .block-chat__img {
@@ -301,4 +303,123 @@ html.dark {
 
 .block-chat__img-img {
   transition: transform 0.25s ease;
+}
+
+// select
+
+.block-select {
+  position: relative;
+  width: 130px;
+  &--top {
+    .block-select__dropdown {
+      top: auto;
+      bottom: 100%;
+      margin-top: 0px;
+      margin-bottom: 5px;
+    }
+  }
+}
+
+.block-select__dropdown,
+.block-select__top {
+  width: 100%;
+  background-color: #191b22;
+  padding: 10px 15px;
+}
+
+.block-select__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 40px;
+  border: 1px solid rgb(255 255 255 / 15%);
+  border-radius: 10px;
+
+  cursor: pointer;
+  user-select: none;
+}
+
+.block-select__arr {
+  flex: none;
+  margin-left: 5px;
+}
+
+.block-select__arr rect {
+  fill: #303138;
+  fill-opacity: 1;
+}
+
+.block-select__arr path {
+  stroke: #fff;
+}
+
+.block-select__val {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.block-select__text {
+  font-family: 'PT Root UI', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  color: #fff;
+}
+
+.block-tabs-el__text,
+.block-user__name {
+  font-family: 'PT Root UI', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.block-select__dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 100;
+  margin-top: 5px;
+  border: 1px solid rgb(255 255 255 / 15%);
+  border-radius: 10px;
+  overflow-y: auto;
+}
+
+.block-select__dropdown-el {
+  cursor: pointer;
+  margin-bottom: 5px;
+}
+
+.block-select__dropdown-el:last-child {
+  margin-bottom: 0 !important;
+}
+
+.block-select__top {
+  svg {
+    transition: transform 0.25s;
+  }
+
+  &._active {
+    svg {
+      transform: rotate(180deg);
+    }
+  }
+}
+
+.block-select {
+  flex-shrink: 0;
+}
+
+.block-select__dropdown {
+  opacity: 0;
+  pointer-events: none;
+
+  &._active {
+    opacity: 1;
+    pointer-events: all;
+  }
+}
+
+.block-select__dropdown {
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
