--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,7 +1,6 @@
 @import 'components/_reset';
 @import 'components/_fonts';
-
-// plagins
+@import 'react-toastify/dist/ReactToastify.css';
 
 // styles
 @import 'components/_variables';
@@ -14,9 +13,8 @@
 @import 'components/_media';
 @import '_addons';
 
-.theme-white{
-  background-color: #F5F5F7;
+.theme-white {
+  background-color: #f5f5f7;
 
   @import 'components/_theme';
 }
-
